Dark mode, copy fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2>How I Can Entertain You</h2>
             <p>I post on <a href="https://x.com/michalkomar" target="_blank" rel="noopener noreferrer">X</a>.</p>
             <p>I live somewhere interesting, probably building something.</p>
-            <p>I'm tall enough, smart enough, and <em>definitely</em> opinionated enough.</p>
+            <p>I'm tall enough, curious enough, and <em>definitely</em> opinionated enough.</p>
         </section>
 
         <section class="value">
