--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         .line {
             margin: 0;
             white-space: pre-wrap;
-            font-size: 0.95rem;
+            font-size: clamp(0.85rem, 2.5vw, 0.95rem);
             line-height: 1.7;
         }
 
@@ -203,6 +203,9 @@
             border-radius: 0;
             color: var(--terminal-text);
             overflow-x: auto;
+            font-size: clamp(0.78rem, 2.3vw, 0.95rem);
+            line-height: 1.7;
+            word-break: break-word;
         }
 
         pre.command-block a {
@@ -215,9 +218,18 @@
                 padding: 0.5rem;
             }
 
+            .terminal-window {
+                padding: 1rem;
+            }
+
             .terminal-form {
                 flex-direction: column;
                 align-items: stretch;
+            }
+
+            pre.command-block,
+            .line {
+                line-height: 1.5;
             }
         }
 
