fix: wrap ascii blocks on mobile

--- a/index.html
+++ b/index.html
@@ -207,10 +207,12 @@
             border: none;
             border-radius: 0;
             color: var(--terminal-text);
-            overflow-x: auto;
+            overflow-x: hidden;
             font-size: clamp(0.8rem, 2vw, 0.95rem);
             line-height: 1.7;
             max-width: 100%;
+            white-space: pre-wrap;
+            word-break: break-word;
             overflow-wrap: anywhere;
         }
 
