feat: show plain command output on mobile

--- a/index.html
+++ b/index.html
@@ -241,6 +241,25 @@
             text-decoration: underline;
         }
 
+        .command-block.plain-only {
+            display: none;
+            font-size: 0.9rem;
+            line-height: 1.6;
+        }
+
+        .command-block.plain-only h3 {
+            margin: 0 0 0.5rem;
+            font-size: 0.95rem;
+            letter-spacing: 0.2em;
+            text-transform: uppercase;
+            color: var(--terminal-muted);
+        }
+
+        .command-block.plain-only ul {
+            margin: 0 0 0.5rem;
+            padding-left: 1.2rem;
+        }
+
         @media (max-width: 640px) {
             body {
                 padding: 0.5rem;
@@ -259,6 +278,14 @@
             .line {
                 font-size: 0.78rem;
                 line-height: 1.5;
+            }
+
+            pre.command-block.ascii-only {
+                display: none;
+            }
+
+            .command-block.plain-only {
+                display: block;
             }
 
             .terminal-clock {
@@ -373,17 +400,21 @@
     </section>
 
     <template data-command="banner">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ╔══════════════════════════════════════════════════════════════╗
 ║  Michal Komar · AI Consultant                                ║
 ║  Type 'help' for available commands                          ║
 ║  Location: Prague · Remote · Global                          ║
 ╚══════════════════════════════════════════════════════════════╝
         </pre>
+        <div class="command-block plain-only">
+            <p><strong>Michal Komar · AI Consultant</strong></p>
+            <p>Type <code>help</code> for available commands. Location: Prague · Remote · Global.</p>
+        </div>
     </template>
 
     <template data-command="help">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ Available Commands ─────────────────────────────────────────┐
 | help        · show this list                                 |
 | about       · hero introduction                              |
@@ -399,10 +430,25 @@
 | clear       · clear the terminal                             |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>Commands</h3>
+            <ul>
+                <li><code>help</code> — show this list</li>
+                <li><code>about</code> — hero introduction</li>
+                <li><code>what</code> — what I do at J&amp;T Banka</li>
+                <li><code>focus</code> — key focus areas</li>
+                <li><code>philosophy</code> — philosophy &amp; approach</li>
+                <li><code>beyond</code> — life outside work</li>
+                <li><code>faq</code> — frequently asked questions</li>
+                <li><code>contact</code> — overview + channel commands</li>
+                <li><code>contact li</code> / <code>contact x</code> / <code>contact gh</code> — direct links</li>
+                <li><code>clear</code> — clear the terminal</li>
+            </ul>
+        </div>
     </template>
 
     <template data-command="about">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ About ───────────────────────────────────────────────────────┐
 | Michal Komar                                                  |
 | AI Consultant                                                 |
@@ -413,10 +459,15 @@
 | entertain you or add value.                                   |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>About</h3>
+            <p>Michal Komar — AI Consultant.</p>
+            <p>I don't know why you're here. Maybe you clicked on a link, maybe you Googled my name, or maybe you're just curious. Whatever the reason, the only thing that matters is how I can entertain you or add value.</p>
+        </div>
     </template>
 
     <template data-command="what">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ What I Do ───────────────────────────────────────────────────┐
 | I'm an AI Consultant at J&amp;T Banka (former Head of Digital     |
 | Experience), where I lead the transformation of banking       |
@@ -434,10 +485,16 @@
 | services demand.                                              |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>What I Do</h3>
+            <p>I'm an AI Consultant at J&amp;T Banka (former Head of Digital Experience), where I lead the transformation of banking through artificial intelligence and digital innovation.</p>
+            <p>My work sits at the intersection of product strategy, AI implementation, and organizational change. I focus on deploying robust AI solutions in production, from intelligent automation to agentic systems that operate in regulated contexts. We've built systems that process over 2 million messages daily, consolidating data from 17 backend systems.</p>
+            <p>My role is to bridge the gap between cutting-edge AI capabilities and the trust and reliability that financial services demand.</p>
+        </div>
     </template>
 
     <template data-command="focus">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ Key Focus Areas ─────────────────────────────────────────────┐
 | • AI-Driven Automation — Building intelligent platforms that  |
 |   streamline banking operations, from customer service to     |
@@ -450,10 +507,18 @@
 |   platforms that handle massive scale and complexity.         |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>Focus Areas</h3>
+            <ul>
+                <li><strong>AI-Driven Automation</strong> — workflow intelligence for banking operations.</li>
+                <li><strong>Agentic AI Systems</strong> — regulated autonomous agents with oversight.</li>
+                <li><strong>Digital Platform Transformation</strong> — modernizing cores to handle massive scale.</li>
+            </ul>
+        </div>
     </template>
 
     <template data-command="philosophy">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ Philosophy &amp; Approach ───────────────────────────────────────┐
 | "The future of banking isn't about replacing humans with AI - |
 |  it's about augmenting human capabilities with intelligent    |
@@ -471,10 +536,20 @@
 | demand are all moving in the same direction.                  |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>Philosophy</h3>
+            <p><em>"The future of banking isn't about replacing humans with AI — it's about augmenting human capabilities with intelligent systems that handle complexity at scale."</em></p>
+            <ul>
+                <li>Start with the customer problem, not the technology.</li>
+                <li>Build systems that are transparent and explainable.</li>
+                <li>Move fast, but with appropriate safeguards.</li>
+            </ul>
+            <p>Alignment, iteration, and measurable outcomes are how we win, especially as technology, regulation, and demand converge.</p>
+        </div>
     </template>
 
     <template data-command="beyond">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ Beyond Work ─────────────────────────────────────────────────┐
 | I post on X about AI, product strategy, and occasionally      |
 | other things that catch my attention. I'm tall enough,        |
@@ -482,10 +557,14 @@
 | perspectives on most topics.                                  |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>Beyond Work</h3>
+            <p>I post on X about AI, product strategy, and whatever else catches my attention. I'm tall enough, curious enough, and definitely opinionated enough to have perspectives on most topics.</p>
+        </div>
     </template>
 
     <template data-command="faq">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ Frequently Asked Questions ──────────────────────────────────┐
 | Who is Michal Komar?                                          |
 |   Michal Komar is an AI Consultant at J&amp;T Banka (former Head  |
@@ -509,10 +588,16 @@
 |   financial services.                                         |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>FAQ</h3>
+            <p><strong>Who is Michal Komar?</strong> An AI Consultant at J&amp;T Banka specializing in intelligent automation, agentic AI systems, and digital platform modernization.</p>
+            <p><strong>Role at J&amp;T Banka?</strong> Leading AI-driven automation, autonomous agent development, and modernization initiatives that ship in regulated environments.</p>
+            <p><strong>Expertise?</strong> AI in banking, digital transformation, product strategy, agentic systems, and organizational change.</p>
+        </div>
     </template>
 
     <template data-command="contact">
-        <pre class="command-block">
+        <pre class="command-block ascii-only">
 ┌─ Contact ─────────────────────────────────────────────────────┐
 | If you're working on interesting problems at the intersection |
 | of AI and finance, or just want to discuss product strategy,  |
@@ -532,6 +617,17 @@
 | (Run those commands to get full links you can click.)         |
 └──────────────────────────────────────────────────────────────┘
         </pre>
+        <div class="command-block plain-only">
+            <h3>Contact</h3>
+            <p>If you're working on interesting problems at the intersection of AI and finance, or just want to discuss product strategy, let's talk.</p>
+            <ul>
+                <li>Agentic AI in regulated environments</li>
+                <li>Building AI-native products</li>
+                <li>Organizational change in traditional institutions</li>
+                <li>The second-order effects of AI on banking</li>
+            </ul>
+            <p>Use <code>contact li</code>, <code>contact x</code>, or <code>contact gh</code> for direct links.</p>
+        </div>
     </template>
 
     <template data-command="contact li">
