style: hide mobile headings in plain output

--- a/index.html
+++ b/index.html
@@ -247,14 +247,6 @@
             line-height: 1.6;
         }
 
-        .command-block.plain-only h3 {
-            margin: 0 0 0.5rem;
-            font-size: 0.95rem;
-            letter-spacing: 0.2em;
-            text-transform: uppercase;
-            color: var(--terminal-muted);
-        }
-
         .command-block.plain-only ul {
             margin: 0 0 0.5rem;
             padding-left: 1.2rem;
@@ -286,6 +278,11 @@
 
             .command-block.plain-only {
                 display: block;
+            }
+
+            .command-block.plain-only h3,
+            .command-block.plain-only strong {
+                display: none;
             }
 
             .terminal-clock {
@@ -408,7 +405,6 @@
 ╚══════════════════════════════════════════════════════════════╝
         </pre>
         <div class="command-block plain-only">
-            <p><strong>Michal Komar · AI Consultant</strong></p>
             <p>Type <code>help</code> for available commands. Location: Prague · Remote · Global.</p>
         </div>
     </template>
@@ -431,7 +427,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>Commands</h3>
             <ul>
                 <li><code>help</code> — show this list</li>
                 <li><code>about</code> — hero introduction</li>
@@ -460,7 +455,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>About</h3>
             <p>Michal Komar — AI Consultant.</p>
             <p>I don't know why you're here. Maybe you clicked on a link, maybe you Googled my name, or maybe you're just curious. Whatever the reason, the only thing that matters is how I can entertain you or add value.</p>
         </div>
@@ -486,7 +480,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>What I Do</h3>
             <p>I'm an AI Consultant at J&amp;T Banka (former Head of Digital Experience), where I lead the transformation of banking through artificial intelligence and digital innovation.</p>
             <p>My work sits at the intersection of product strategy, AI implementation, and organizational change. I focus on deploying robust AI solutions in production, from intelligent automation to agentic systems that operate in regulated contexts. We've built systems that process over 2 million messages daily, consolidating data from 17 backend systems.</p>
             <p>My role is to bridge the gap between cutting-edge AI capabilities and the trust and reliability that financial services demand.</p>
@@ -508,7 +501,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>Focus Areas</h3>
             <ul>
                 <li><strong>AI-Driven Automation</strong> — workflow intelligence for banking operations.</li>
                 <li><strong>Agentic AI Systems</strong> — regulated autonomous agents with oversight.</li>
@@ -537,7 +529,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>Philosophy</h3>
             <p><em>"The future of banking isn't about replacing humans with AI — it's about augmenting human capabilities with intelligent systems that handle complexity at scale."</em></p>
             <ul>
                 <li>Start with the customer problem, not the technology.</li>
@@ -558,7 +549,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>Beyond Work</h3>
             <p>I post on X about AI, product strategy, and whatever else catches my attention. I'm tall enough, curious enough, and definitely opinionated enough to have perspectives on most topics.</p>
         </div>
     </template>
@@ -589,10 +579,9 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>FAQ</h3>
-            <p><strong>Who is Michal Komar?</strong> An AI Consultant at J&amp;T Banka specializing in intelligent automation, agentic AI systems, and digital platform modernization.</p>
-            <p><strong>Role at J&amp;T Banka?</strong> Leading AI-driven automation, autonomous agent development, and modernization initiatives that ship in regulated environments.</p>
-            <p><strong>Expertise?</strong> AI in banking, digital transformation, product strategy, agentic systems, and organizational change.</p>
+            <p>Who is Michal Komar? An AI Consultant at J&amp;T Banka specializing in intelligent automation, agentic AI systems, and digital platform modernization.</p>
+            <p>Role at J&amp;T Banka? Leading AI-driven automation, autonomous agent development, and modernization initiatives that ship in regulated environments.</p>
+            <p>Expertise? AI in banking, digital transformation, product strategy, agentic systems, and organizational change.</p>
         </div>
     </template>
 
@@ -618,7 +607,6 @@
 └──────────────────────────────────────────────────────────────┘
         </pre>
         <div class="command-block plain-only">
-            <h3>Contact</h3>
             <p>If you're working on interesting problems at the intersection of AI and finance, or just want to discuss product strategy, let's talk.</p>
             <ul>
                 <li>Agentic AI in regulated environments</li>
