--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
             padding: clamp(1rem, 4vw, 2.5rem);
         }
 
+        :where(h1) {
+            font-size: clamp(1.5rem, 2.8vw, 2rem);
+            line-height: 1.2;
+            margin: 0 0 0.75rem;
+            font-weight: 500;
+            letter-spacing: -0.02em;
+        }
+
+        :where(h2) {
+            font-size: clamp(1.2rem, 2.2vw, 1.45rem);
+            line-height: 1.35;
+            margin: 0 0 0.6rem;
+            font-weight: 500;
+        }
+
+        :where(h3) {
+            font-size: clamp(1rem, 1.8vw, 1.2rem);
+            line-height: 1.4;
+            margin: 0 0 0.5rem;
+            font-weight: 500;
+        }
+
         main.terminal {
             width: min(960px, 100%);
             background: var(--terminal-panel);
